<resources>
    <string name="app_name">MyGameList</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>

    <string name="new_release">New Release</string>
    <string name="top_rated">Top Rated</string>
    <string name="release_date">Release Dates</string>
    <string name="ratings">Ratings</string>
    <string name="genre">Genres</string>
    <string name="game_photo">game_photo</string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="string_value">*String</string>
    <string name="int_value">*Int</string>

    <string name="favorite">Favorite</string>
    <string name="followers">Followers</string>
    <string name="age">Age</string>
    <string name="games_played">Games Played</string>
    <string name="edit">Edit</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
</resources>