<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/img_game_photo"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/game_photo" />

    <TextView
        android:id="@+id/tv_game_title"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/bg_gradient_black"
        android:gravity="center_horizontal|bottom"
        android:paddingBottom="4dp"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_game_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/app_name" />

    <TextView
        style="@style/Detail.Atribute"
        android:id="@+id/tv_released_attr"
        android:text="@string/release_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_game_title" />

    <TextView
        android:id="@+id/tv_released"
        style="@style/Detail.Value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_released_attr"
        tools:text="2002/01/01" />

    <TextView
        android:id="@+id/tv_ratings_attr"
        style="@style/Detail.Atribute"
        android:text="@string/ratings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_released" />

    <TextView
        android:id="@+id/tv_ratings"
        style="@style/Detail.Value"
        android:drawableStart="@drawable/ic_baseline_star_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ratings_attr"
        android:drawablePadding="5dp"
        tools:text="3.5" />

    <TextView
        android:id="@+id/tv_genre_attr"
        style="@style/Detail.Atribute"
        android:text="@string/genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ratings" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre_attr" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_secondary"
        android:text="@string/share"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_more_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/btn_more_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_secondary"
        android:text="More Details"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_share"/>
</androidx.constraintlayout.widget.ConstraintLayout>